kubernets-filees/app-deployment/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drkiq-ingress
  namespace: rails-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: drkiq
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drkiq-svc
                port:
                  number: 8010
